--- a/rancher-app.yaml
+++ b/rancher-app.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://releases.rancher.com/server-charts/latest
     chart: rancher
-    targetRevision: latest
+    targetRevision: 2.6.3
     helm:
       valueFiles:
         - values.yaml # If you have custom values file
